--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@
 .div-menu {
     width: 100%;
     height: 70px;
-    background-color: rgb(92, 68, 0);
+    background-color: rgb(97, 78, 24);
     border: solid 1px;
     border-color: white;
     border-radius: 3px;
@@ -34,7 +34,7 @@
     width: 120px;
     height: 70px;
     float: left;
-    background-color: rgb(92, 68, 0);
+    background-color: rgb(97, 78, 24);
     color: black;
     font-size: large;
     border-left: solid 1px;
@@ -95,12 +95,12 @@
 
 .div-menu-wallpaper {
     width: 100%;
-    height: 100%;
+    height: 85%;
 }
 
 .div-menu-wallpaper img {
     width: 100%;
-    height: 85%;
+    height: 100%;
     margin-top: 5px;
     position: relative;
 }
@@ -113,13 +113,14 @@
     text-align: center;
     position: absolute;
     top: 300px;
-    margin-left: 500px;
+    margin-left: 530px;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 .div-menu-wallpaper-button {
     width: 10%;
     height: 50px;
+    margin: 0 auto;
     background-color: rgb(0, 177, 0);
     text-align: center;
     font-size: medium;
@@ -129,7 +130,7 @@
     border-color: white;
     position: absolute;
     top: 450px;
-    margin-left: 650px;
+    margin-left: 670px;
     color: white;
 }
 
@@ -137,4 +138,90 @@
     cursor: pointer;
     background-color: rgb(0, 255, 0);
     border-color: black;
+}
+
+.div-produtos {
+    width: 100%;
+    height: 100%;
+    margin-top: 50px;
+}
+
+.div-produtos-titulo {
+    width: 200px;
+    height: 50px;
+    margin: 0 auto;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    text-align: center;
+    font-size: xx-large;
+    color: rgb(48, 35, 0);
+    font-style: italic;
+}
+
+.div-produtos-list {
+    width: 900px;
+    height: 280px;
+    margin: 0 auto;
+    margin-top: 80px;
+}
+
+.div-produtos-list-item {
+    width: 250px;
+    height: 280px;
+    margin: 0 auto;
+    float: left;
+    margin-left: 40px;
+    background-color: rgb(180, 180, 180);
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+
+.div-produtos-list-item img {
+    width: 250px;
+    height: 200px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+
+.div-produtos-list-item-title {
+    width: 250px;
+    height: 30px;
+    margin-top: 5px;
+    text-align: center;
+    color: rgb(39, 39, 39);
+    font-size: medium;
+}
+
+.div-produtos-list-item-preco {
+    width: 250px;
+    height: 30px;
+    margin-top: 5px;
+    background-color: rgb(3, 190, 3);
+    color: white;
+    font-size: medium;
+    text-align: center;
+    vertical-align: middle;
+    padding-top: 5px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+
+.div-produtos-mais-op {
+    width: 10%;
+    height: 50px;
+    margin: 0 auto;
+    background-color: white;
+    text-align: center;
+    font-size: medium;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    border: solid 1px;
+    border-radius: 5px;
+    border-color: rgb(3, 190, 3);
+    color: rgb(3, 190, 3);
+    margin-top: 80px;
+}
+
+.div-produtos-mais-op:hover {
+    cursor: pointer;
+    background-color: rgb(3, 190, 3);
+    color: white;
 }
