--- a/css/styles.css
+++ b/css/styles.css
@@ -143,7 +143,7 @@
 .div-produtos {
     width: 100%;
     height: 100%;
-    margin-top: 50px;
+    margin-top: 100px;
 }
 
 .div-produtos-titulo {
@@ -224,4 +224,30 @@
     cursor: pointer;
     background-color: rgb(3, 190, 3);
     color: white;
+}
+
+.div-video-demo {
+    width: 100%;
+    height: 100%;
+}
+
+.div-video-demo-titulo {
+    width: 600px;
+    height: 50px;
+    margin: 0 auto;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    text-align: center;
+    font-size: xx-large;
+    color: rgb(48, 35, 0);
+    font-style: italic;
+}
+
+.div-video-demo-video {
+    width: 70%;
+    height: 70%;
+    margin: 0 auto;
+    margin-top: 50px;
+    border: solid 5px;
+    border-radius: 5px;
+    border-color: rgb(48, 35, 0);
 }
