--- a/css/styles.css
+++ b/css/styles.css
@@ -356,3 +356,41 @@
 .div-footer-icons-img img:hover {
     cursor: pointer;
 }
+
+.div-login-root {
+    width: 100%;
+    height: 100%;
+}
+
+.div-login-root img {
+    width: 100%;
+    height: 100%;
+}
+
+.div-login {
+    width: 500px;
+    height: 550px;
+    background-color: rgb(116, 204, 216);
+    position: absolute;
+    top: 100px;
+    left: 530px;
+    border: solid 1px;
+    border-radius: 5px;
+    border-color: whitesmoke;
+    align-items: center;
+    color: whitesmoke;
+}
+
+.div-login-form {
+    margin: 50px;
+}
+
+.div-login-form img {
+    width: 50px;
+    height: 50px;
+    margin-left: 180px;
+}
+
+.btn {
+    margin-top: 10px;
+}
