--- a/css/styles.css
+++ b/css/styles.css
@@ -370,7 +370,7 @@
 .div-login {
     width: 500px;
     height: 550px;
-    background-color: rgb(116, 204, 216);
+    background-color: rgb(86, 89, 90);
     position: absolute;
     top: 100px;
     left: 530px;
@@ -393,4 +393,50 @@
 
 .btn {
     margin-top: 10px;
+}
+
+.div-signup-root {
+    width: 100%;
+    height: 100%;
+}
+
+.div-signup-root img {
+    width: 100%;
+    height: 100%;
+}
+
+.div-signup {
+    width: 700px;
+    height: 500px;
+    background-color: rgb(86, 89, 90);
+    position: absolute;
+    top: 100px;
+    left: 430px;
+    border: solid 1px;
+    border-radius: 5px;
+    border-color: whitesmoke;
+    align-items: center;
+    color: whitesmoke;
+}
+
+.div-signup-form {
+    width: 95%;
+    height: 90%;
+    margin: 10px auto;
+}
+
+.div-signup-title {
+    margin-top: 10px;
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.div-form-row {
+    margin: 30px;
+}
+
+.div-form-btn {
+    width: 90%;
+    height: 50px;
+    margin: 0 auto;
 }
