--- a/css/styles.css
+++ b/css/styles.css
@@ -332,7 +332,7 @@
     width: 100%;
     height: 20%;
     background-color: rgb(63, 55, 31);
-    margin-bottom: 0px;
+    margin: 0 auto;
 }
 
 .div-footer-icons {
@@ -344,7 +344,7 @@
 .div-footer-icons-img {
     width: 50px;
     height: 50px;
-    margin-left: 50px;
+    margin-left: 70px;
     float: left;
 }
 
