--- a/css/styles.css
+++ b/css/styles.css
@@ -498,3 +498,73 @@
     background-color: rgb(0, 255, 21);
     color: black;
 }
+
+.div-cart-root {
+    width: 70%;
+    height: 150px;
+    border-top: solid 1px;
+    border-bottom: solid 1px;
+    border-color: rgb(0, 0, 0);
+    margin: 50px auto;
+}
+
+.div-cart-img img {
+    width: 140px;
+    height: 140px;
+    margin: 4px 4px;
+    float: left;
+    border-radius: 3px;
+}
+
+.div-cart-info {
+    width: 700px;
+    height: 100px;
+    margin: 22px;
+    float: left;
+}
+
+.div-cart-info-title {
+    width: fit-content;
+    height: 20px;
+    font-weight: bolder;
+    font-size: medium;
+    margin: 0 10px;
+    font-style: italic;
+}
+
+.div-cart-info-content {
+    width: fit-content;
+    height: 20px;
+    font-size: small;
+    margin: 15px 15px;
+}
+
+.div-total-root {
+    width: 300px;
+    height: 100px;
+    margin-left: 65%;
+    margin-top: 50px;
+    border-color: black;
+    border-top: solid 2px;
+    border-bottom: solid 2px;
+}
+
+.div-total-content {
+    width: fit-content;
+    height: 50px;
+    margin-top: 35px;
+    margin-left: 30px;
+    font-weight: bolder;
+    float: left;
+}
+
+.div-total-price {
+    width: fit-content;
+    height: 50px;
+    float: left;
+    margin-top: 32px;
+    margin-left: 100px;
+    color: rgb(4, 196, 4);
+    font-size: large;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+}
